tests/snapshots/additional_edge_cases__complex_type_combinations.snap
---
source: tests/additional_edge_cases.rs
expression: program
---
Program {
    statements: [
        Function {
            attributes: [],
            name: Token {
                kind: Identifier,
                span: Span {
                    start: 15,
                    end: 22,
                },
            },
            by_ref: false,
            params: [
                Param {
                    attributes: [],
                    modifiers: [],
                    name: Token {
                        kind: Variable,
                        span: Span {
                            start: 45,
                            end: 47,
                        },
                    },
                    ty: Some(
                        Union(
                            [
                                Intersection(
                                    [
                                        Name(
                                            Name {
                                                parts: [
                                                    Token {
                                                        kind: Identifier,
                                                        span: Span {
                                                            start: 29,
                                                            end: 32,
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 29,
                                                    end: 32,
                                                },
                                            },
                                        ),
                                        Name(
                                            Name {
                                                parts: [
                                                    Token {
                                                        kind: Identifier,
                                                        span: Span {
                                                            start: 33,
                                                            end: 36,
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 33,
                                                    end: 36,
                                                },
                                            },
                                        ),
                                    ],
                                ),
                                Simple(
                                    Token {
                                        kind: TypeString,
                                        span: Span {
                                            start: 38,
                                            end: 44,
                                        },
                                    },
                                ),
                            ],
                        ),
                    ),
                    default: None,
                    by_ref: false,
                    variadic: false,
                    hooks: None,
                    span: Span {
                        start: 28,
                        end: 47,
                    },
                },
                Param {
                    attributes: [],
                    modifiers: [],
                    name: Token {
                        kind: Variable,
                        span: Span {
                            start: 67,
                            end: 69,
                        },
                    },
                    ty: Some(
                        Union(
                            [
                                Simple(
                                    Token {
                                        kind: TypeInt,
                                        span: Span {
                                            start: 53,
                                            end: 56,
                                        },
                                    },
                                ),
                                Intersection(
                                    [
                                        Name(
                                            Name {
                                                parts: [
                                                    Token {
                                                        kind: Identifier,
                                                        span: Span {
                                                            start: 58,
                                                            end: 61,
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 58,
                                                    end: 61,
                                                },
                                            },
                                        ),
                                        Name(
                                            Name {
                                                parts: [
                                                    Token {
                                                        kind: Identifier,
                                                        span: Span {
                                                            start: 62,
                                                            end: 65,
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 62,
                                                    end: 65,
                                                },
                                            },
                                        ),
                                    ],
                                ),
                            ],
                        ),
                    ),
                    default: None,
                    by_ref: false,
                    variadic: false,
                    hooks: None,
                    span: Span {
                        start: 53,
                        end: 69,
                    },
                },
                Param {
                    attributes: [],
                    modifiers: [],
                    name: Token {
                        kind: Variable,
                        span: Span {
                            start: 92,
                            end: 94,
                        },
                    },
                    ty: Some(
                        Union(
                            [
                                Simple(
                                    Token {
                                        kind: TypeNull,
                                        span: Span {
                                            start: 75,
                                            end: 79,
                                        },
                                    },
                                ),
                                Intersection(
                                    [
                                        Name(
                                            Name {
                                                parts: [
                                                    Token {
                                                        kind: Identifier,
                                                        span: Span {
                                                            start: 81,
                                                            end: 82,
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 81,
                                                    end: 82,
                                                },
                                            },
                                        ),
                                        Name(
                                            Name {
                                                parts: [
                                                    Token {
                                                        kind: Identifier,
                                                        span: Span {
                                                            start: 83,
                                                            end: 84,
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 83,
                                                    end: 84,
                                                },
                                            },
                                        ),
                                    ],
                                ),
                                Intersection(
                                    [
                                        Name(
                                            Name {
                                                parts: [
                                                    Token {
                                                        kind: Identifier,
                                                        span: Span {
                                                            start: 87,
                                                            end: 88,
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 87,
                                                    end: 88,
                                                },
                                            },
                                        ),
                                        Name(
                                            Name {
                                                parts: [
                                                    Token {
                                                        kind: Identifier,
                                                        span: Span {
                                                            start: 89,
                                                            end: 90,
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 89,
                                                    end: 90,
                                                },
                                            },
                                        ),
                                    ],
                                ),
                            ],
                        ),
                    ),
                    default: None,
                    by_ref: false,
                    variadic: false,
                    hooks: None,
                    span: Span {
                        start: 75,
                        end: 94,
                    },
                },
            ],
            return_type: Some(
                Union(
                    [
                        Intersection(
                            [
                                Name(
                                    Name {
                                        parts: [
                                            Token {
                                                kind: Identifier,
                                                span: Span {
                                                    start: 99,
                                                    end: 100,
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 99,
                                            end: 100,
                                        },
                                    },
                                ),
                                Name(
                                    Name {
                                        parts: [
                                            Token {
                                                kind: Identifier,
                                                span: Span {
                                                    start: 101,
                                                    end: 102,
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 101,
                                            end: 102,
                                        },
                                    },
                                ),
                            ],
                        ),
                        Simple(
                            Token {
                                kind: TypeInt,
                                span: Span {
                                    start: 104,
                                    end: 107,
                                },
                            },
                        ),
                        Simple(
                            Token {
                                kind: TypeString,
                                span: Span {
                                    start: 108,
                                    end: 114,
                                },
                            },
                        ),
                    ],
                ),
            ),
            body: [
                Return {
                    expr: Some(
                        Integer {
                            value: [
                                52,
                                50,
                            ],
                            span: Span {
                                start: 128,
                                end: 130,
                            },
                        },
                    ),
                    span: Span {
                        start: 121,
                        end: 133,
                    },
                },
            ],
            doc_comment: None,
            span: Span {
                start: 6,
                end: 134,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 134,
    },
}
